--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -59,7 +59,10 @@ jobs:
       - name: Deploy to staging
         run: |
           cd apps/api
-          fly deploy --config ../../infra/fly.toml --app $FLY_APP_STAGING --remote-only
+          fly deploy --config ../../infra/fly.toml --app $FLY_APP_STAGING --remote-only \
+            --build-arg VERSION=0.1.0 \
+            --build-arg GIT_SHA=${{ github.sha }} \
+            --build-arg BUILD_TIME=$(date -u +%Y-%m-%dT%H:%M:%SZ)
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       
@@ -121,7 +124,10 @@ jobs:
       - name: Deploy to production
         run: |
           cd apps/api
-          fly deploy --config ../../infra/fly.toml --app $FLY_APP --remote-only
+          fly deploy --config ../../infra/fly.toml --app $FLY_APP --remote-only \
+            --build-arg VERSION=0.1.0 \
+            --build-arg GIT_SHA=${{ github.sha }} \
+            --build-arg BUILD_TIME=$(date -u +%Y-%m-%dT%H:%M:%SZ)
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       
