--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.116.1"}
 psycopg = {extras = ["binary"], version = "^3.2.9"}
+psycopg2-binary = "^2.9.9"
 pydantic-settings = "^2.10.1"
 sqlalchemy = "^2.0.43"
 alembic = "^1.16.5"
