--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Poetry
         run: pipx install poetry
       
+      - name: Update lock file
+        run: poetry lock --no-update
+      
       - name: Install dependencies
         run: poetry install --no-root
       
