--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: pipx install poetry
       
       - name: Update lock file
-        run: poetry lock --no-update
+        run: poetry lock
       
       - name: Install dependencies
         run: poetry install --no-root
