--- a/.github/workflows/api-deploy-prod.yml
+++ b/.github/workflows/api-deploy-prod.yml
@@ -1,7 +1,7 @@
 name: API Deploy (Prod Direct)
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   push:
     branches: [ main ]
     paths:
@@ -29,7 +29,7 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: Login to Fly.io
-        run: flyctl auth token $FLY_API_TOKEN
+        run: flyctl auth login --access-token "$FLY_API_TOKEN"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
@@ -52,7 +52,7 @@ jobs:
       #     - name: Setup Flyctl
       #       uses: superfly/flyctl-actions/setup-flyctl@master
       #     - name: Login to Fly.io
-      #       run: flyctl auth token $FLY_API_TOKEN
+      #       run: flyctl auth login --access-token "$FLY_API_TOKEN"
       #       env:
       #         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       #     - name: List releases
