fix(ci): point prod deploy to Fly app 'app-ezgnqzzi'

--- a/.github/workflows/api-deploy-prod.yml
+++ b/.github/workflows/api-deploy-prod.yml
@@ -10,7 +10,7 @@ on:
       - ".github/workflows/api-deploy-prod.yml"
 
 env:
-  FLY_APP: vatevo-api
+  FLY_APP: app-ezgnqzzi
 
 jobs:
   deploy_prod:
