--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -2,7 +2,11 @@ name: vatevo-api
 region: ams3
 services:
   - name: api
-    dockerfile_path: apps/api/Dockerfile
+    github:
+      repo: gabriellagziel/vatEvo
+      branch: main
+      deploy_on_push: true
+    source_dir: apps/api
     http_port: 8080
     instance_count: 1
     instance_size_slug: basic-xxs
@@ -20,4 +24,3 @@ services:
         value: production
       - key: APP_VERSION
         value: "0.1.0"
-# Trigger deployment
