--- a/.github/workflows/do-app-deploy.yml
+++ b/.github/workflows/do-app-deploy.yml
@@ -23,17 +23,16 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          if doctl apps list --format "Spec.Name,ID" | awk '$1=="vatevo-api"{print $2}' | grep -q .; then
-            APP_ID=$(doctl apps list --format "Spec.Name,ID" | awk '$1=="vatevo-api"{print $2; exit}')
+          if doctl apps list --format "ID,Spec.Name" --no-header | awk '$2=="vatevo-api"{print $1}' | grep -q .; then
+            APP_ID=$(doctl apps list --format "ID,Spec.Name" --no-header | awk '$2=="vatevo-api"{print $1; exit}')
             echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
             echo "Updating app $APP_ID from spec..."
-            doctl apps update $APP_ID --spec .do/app.yaml >/tmp/do-update.json
-            cat /tmp/do-update.json
+            doctl apps update $APP_ID --spec .do/app.yaml --format json
           else
             echo "Creating app from spec..."
-            doctl apps create --spec .do/app.yaml >/tmp/do-create.json
-            cat /tmp/do-create.json
-            APP_ID=$(jq -r '.id' /tmp/do-create.json)
+            CREATE_OUTPUT=$(doctl apps create --spec .do/app.yaml --format json)
+            echo "$CREATE_OUTPUT"
+            APP_ID=$(echo "$CREATE_OUTPUT" | jq -r '.[0].id')
             echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
           fi
 
