--- a/.github/workflows/do-app-deploy.yml
+++ b/.github/workflows/do-app-deploy.yml
@@ -27,7 +27,7 @@ jobs:
             APP_ID=$(doctl apps list --format "ID,Spec.Name" --no-header | awk '$2=="vatevo-api"{print $1; exit}')
             echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
             echo "Updating app $APP_ID from spec..."
-            doctl apps update $APP_ID --spec .do/app.yaml --format json
+            doctl apps update $APP_ID --spec .do/app.yaml
           else
             echo "Creating app from spec..."
             CREATE_OUTPUT=$(doctl apps create --spec .do/app.yaml --format json)
