--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,7 +7,7 @@ services:
       branch: main
       deploy_on_push: true
     source_dir: apps/api
-    run_command: uvicorn api.app.main:app --host 0.0.0.0 --port 8080
+    run_command: uvicorn app.main:app --host 0.0.0.0 --port 8080
     http_port: 8080
     instance_count: 1
     instance_size_slug: basic-xxs
